# aether

./: .eslintrc.cjs  .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  SECURITY_AUDIT.md  TRAINING.md  eslint.config.mjs  package-lock.json  package.json  pyproject.toml  requirements.txt  vitest.config.ts
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
core/: __init__.py
core/critic/: __init__.py  adaptive_conformal.py  calibration.py  decomposition.py
core/data/: __init__.py  bpi2019_parser.py  csv_event_loader.py  ocel_parser.py  prepare_training_data.py  sap_extractor.py  unified_pipeline.py
core/encoder/: __init__.py  event_encoder.py  (+2 more)
docs/: ARCHITECTURE.md  BENCHMARKS.md  BENCHMARK_COMPARISON.md  QUICKSTART.md  VOCABULARY_NORMALIZATION_ANALYSIS.md
examples/: governance_walkthrough.ts  quick_prediction.py  sample_events.json
scripts/: benchmark_bpi2013.py  benchmark_bpi2015.py  benchmark_bpi2018.py  benchmark_fitbit.py  benchmark_judicial.py  benchmark_netsuite_2025.py  benchmark_road_traffic.py  benchmark_sap_bsp669.py  benchmark_sap_workflow.py  benchmark_vocab_aware_floor.py  benchmark_vocab_normalization_prototype.py  benchmark_vocab_normalization_v2.py  benchmark_wearable_tracker.py  generate_benchmark_report.py  migrate_checkpoints.py  parse_bpi2013_incidents.py  parse_bpi2015.py  parse_bpi2017.py  parse_bpi2018.py  parse_bpi2020.py  parse_fitbit_erp.py  parse_judicial_events.py  parse_netsuite_transactions.py  parse_road_traffic.py  parse_sap_bsp669.py  parse_sap_workflow.py  parse_wearable_tracker_erp.py  train_bpi2013.py  train_bpi2015.py  train_bpi2017.py  train_bpi2018.py  train_bpi2020.py  train_fitbit.py  train_judicial.py  train_netsuite_2025.py  train_road_traffic.py  train_road_traffic_v2.py  train_sap_bsp669.py  train_sap_workflow.py  train_wearable_tracker.py  (+1 more)
(+65 files in other folders)
