[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aether-core"
version = "0.1.0"
description = "P-JEPA: Process-JEPA for uncertainty-aware business event prediction. Extends LeCun's Joint Embedding Architecture with epistemic governance and SIGReg regularization."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Christopher Bailey"},
]
keywords = [
    "jepa",
    "world-model",
    "process-mining",
    "uncertainty-quantification",
    "sigreg",
    "vicreg",
    "event-prediction",
    "self-supervised-learning",
    "pytorch",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pandas>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.24.0",
]

[project.urls]
Homepage = "https://github.com/christopherbailey/aether"
Repository = "https://github.com/christopherbailey/aether"
Documentation = "https://github.com/christopherbailey/aether/blob/main/docs/ARCHITECTURE.md"

[tool.setuptools.packages.find]
include = ["core*"]

[tool.ruff]
exclude = [".venv", "__pycache__", ".git"]

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]  # Line too long handled by formatter

[tool.ruff.lint.per-file-ignores]
# Scripts need to modify sys.path before importing
"scripts/*.py" = ["E402"]
